--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- video background -->
+    <video class="video-background" loop muted autoplay>
+      <source src="./time.mp4" type="video/mp4">
+    </video>
+    <div class="video-overlay"></div>
     <!-- script -->
     <script src="./script.js"></script>
   </body>
