--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <video class="video-background" loop muted autoplay>
       <source src="./time.mp4" type="video/mp4">
     </video>
-    <div class="video-overlay"></div>
+    <!-- <div class="video-overlay"></div> -->
+    <!-- container -->
+    <!-- <div class="container"></div> -->
     <!-- script -->
     <script src="./script.js"></script>
   </body>
