feat, added minimum date bar to date picker

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="video-overlay"></div>
     <!-- container -->
     <div class="container">
-      <div class="input-container" id="input-container" hidden>
+      <div class="input-container" id="input-container">
         <h1>Create a Custom Countdown</h1>
         <form class="form" id="countdownForm">
           <label for="title">Title</label>
@@ -66,7 +66,7 @@
         <button id="countdown-button">Reset</button>
       </div>
       <!-- complete countdown -->
-      <div class="complete" id="complete">
+      <div class="complete" id="complete" hidden>
         <h1 class="complete-title" id="complete-title">Countdown Complete!</h1>
         <h1 id="complete-info">Countdown title completed on 05-05-2020</h1>
         <button id="complete-button">New Countdown Timer</button>
