--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <h1>Create a Custom Countdown</h1>
         <form class="form" id="countdownForm">
           <label for="title">Title</label>
-          <input type="text" id="title" placeholder="What are you counting down to?">
+          <input type="text" id="title" placeholder="What are you counting down to?" required oninvalid="this.setCustomValidity('Enter Countdown Title please')"
+          oninput="setCustomValidity('')">
           <label for="date-picker">Select a Date</label>
           <input type="date" id="date-picker">
           <button type="submit">Submit</button>
